# GameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gameScript.js  index.html
src/: GameOfLife.cpp  Window.cpp  Window.h
src/Graphics/: CMakeLists.txt  Window.cpp  Window.h
